[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/main/music-player.gd" type="Script" id=1]
[ext_resource path="res://assets/main/music/hiphop-03.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/main/music/house-01.ogg" type="AudioStream" id=3]
[ext_resource path="res://src/main/music-tween.gd" type="Script" id=4]
[ext_resource path="res://src/main/freshness-inspector.gd" type="Script" id=5]
[ext_resource path="res://assets/main/music/hiphop-04.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/main/music/house-04.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/main/music/house-06.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/main/music/house-08.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/main/music/hiphop-08.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/main/music/tutorial.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/main/music/house-10.ogg" type="AudioStream" id=12]

[node name="MusicPlayer" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="HipHop03" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Music Bus"

[node name="HipHop04" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Music Bus"

[node name="HipHop08" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "Music Bus"

[node name="House01" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Music Bus"

[node name="House04" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "Music Bus"

[node name="House06" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "Music Bus"

[node name="House08" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "Music Bus"

[node name="House10" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
bus = "Music Bus"

[node name="Tutorial" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "Music Bus"

[node name="MusicTween" type="Tween" parent="."]
script = ExtResource( 4 )

[node name="FreshnessInspector" type="Timer" parent="."]
wait_time = 3.0
autostart = true
script = ExtResource( 5 )
[connection signal="bgm_changed" from="." to="FreshnessInspector" method="_on_MusicPlayer_bgm_changed"]
[connection signal="tween_completed" from="MusicTween" to="MusicTween" method="_on_tween_completed"]
[connection signal="timeout" from="FreshnessInspector" to="FreshnessInspector" method="_on_timeout"]
